# rust-infinitable

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
tests/: test.rs
