[package]
name = "infinitable"
version = "1.6.0"
edition = "2021"
authors = ["Philip Chung <philipchung1995@yahoo.com>"]
description = "Infinity for types without infinite values"
repository = "https://github.com/ObjectBoxPC/rust-infinitable"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["infinity", "mathematics"]
categories = ["mathematics", "no-std"]

[dependencies.num-traits]
version = "0.2"
default-features = false
